<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="text_movie">Movie 1</string>
    <string name="txt_description">Description</string>
    <string name="txt_year">year</string>
    <string name="txt_rating">90</string>
    <string name="thumbnail_description">Description :</string>
    <string name="year_thumbnail">Year :</string>
    <string name="movie_image_description">movie_image</string>
    <string name="spacing">:</string>
    <string name="release_date_thumbnail">Release Date</string>
    <string name="release_date">release_date</string>
    <string name="duration_thumbnail">Duration</string>
    <string name="duration">duration</string>
    <string name="genre">genre</string>
    <string name="genre_thumbnail">Genre</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Here</string>
    <string name="setting_language">Setting</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="Movie">Movie</string>
    <string name="TvShow">TV Show</string>
    <string-array name="movie_title">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
    <string-array name="movie_rating">
        <item>75</item>
        <item>68</item>
        <item>83</item>
        <item>70</item>
        <item>81</item>
        <item>65</item>
        <item>67</item>
        <item>69</item>
        <item>76</item>
        <item>65</item>
        <item>63</item>
        <item>60</item>
        <item>66</item>
        <item>71</item>
        <item>84</item>
        <item>60</item>
        <item>65</item>
        <item>66</item>
    </string-array>
    <string-array name="movie_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>
    <string-array name="movie_description">
        <item>Seasoned musician Jackson Maine discovers - and falls in love with - struggling artist Ally. She has just about given up on her dream to make it big as a singer, until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, the city of Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people - and then the surface world. Standing in his way is Aquaman, Orm\'s half-human, half-Atlantean brother and true heir to the throne. With help from royal counselor Vulko, Aquaman must retrieve the legendary Trident of Atlan and embrace his destiny as protector of the deep.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>When a mysterious force decimates the world\'s population, only one thing is certain: if you see it, you take your life. Facing the unknown, Malorie finds love, hope and a new beginning only for it to unravel. Now she must flee with her two children down a treacherous river to the one place left that may offer sanctuary. But to survive, they\'ll have to undertake the perilous two-day journey blindfolded.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.  When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Follows Adonis Creed\'s life inside and outside of the ring as he deals with new found fame, issues with his family, and his continuing quest to become a champion.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away.  When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>In a series of escalating encounters, security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Captain Glass of the USS "Arkansas" discovers that a coup d\'état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war.</item>
        <item>Set in a world many thousands of years in the future. Earth\'s cities now roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive Traction Cities, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the Outlands who will change the course of his life forever.</item>
        <item>After three years, the business of Muslihat, who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira, her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>In Stockholm, Sweden, hacker Lisbeth Salander is hired by Frans Balder, a computer engineer, to retrieve a program that he believes it is too dangerous to exist.</item>
        <item>A 90 year old horticulturalist and Korean War veteran is caught transporting $3 million worth of cocaine through Illinois for a Mexican drug cartel.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>
    <string-array name="movie_release_date">
        <item>October 5, 2018</item>
        <item>December 21, 2018</item>
        <item>April 25, 2018</item>
        <item>November 12, 2018</item>
        <item>October 24, 2018</item>
        <item>December 15, 2018</item>
        <item>November 21, 2018</item>
        <item>December 11, 2018</item>
        <item>January 3, 2019</item>
        <item>December 14, 2018</item>
        <item>January 16, 2019</item>
        <item>October 19, 2018</item>
        <item>December 19, 2018</item>
        <item>December 5, 2018</item>
        <item>January 17, 2019</item>
        <item>November 20, 2018</item>
        <item>December 7, 2018</item>
        <item>October 26, 2018</item>
        <item>December 14, 2018</item>
        <item>September 28, 2018</item>
    </string-array>
    <string-array name="movie_duration">
        <item>2h 15m</item>
        <item>2h 23m</item>
        <item>2h 29m</item>
        <item>2h 4m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>1h 41m</item>
        <item>2h 9m</item>
        <item>2h 2m</item>
        <item>2h 11m</item>
        <item>2h 8m</item>
        <item>1h 34m</item>
        <item>1h 56m</item>
        <item>1h 57m</item>
        <item>1h 57m</item>
        <item>1h 56m</item>
        <item>1h 52m</item>
    </string-array>
    <string-array name="movie_genre">
        <item>Drama, Music, Romance</item>
        <item>Fantasy, Adventure</item>
        <item>Adventure, Action, Fantasy</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama, Action</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Action, Animation, Science Fiction, Fantasy</item>
        <item>Thriller, Mystery, Drama, Fantasy</item>
        <item>Action, Thriller</item>
        <item>Fantasy, Family, Comedy</item>
        <item>Science Fiction, Action, Adventure, Fantasy, Thriller</item>
        <item>Comedy, Drama</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Thriller, Crime, Action</item>
        <item>Crime, Drama, Thriller</item>
        <item>Science Fiction, Action</item>
    </string-array>
    <string-array name="tv_show_title">
        <item>Alita: Battle Angel</item>
        <item>Happy Death Day 2U</item>
        <item>The Hole in the Ground</item>
        <item>Greta</item>
        <item>Fighting With My Family</item>
        <item>9</item>
        <item>Bilby</item>
        <item>Ruben Brandt, Collector</item>
        <item>Little Woods</item>
        <item>Birds of Passage</item>
        <item>Climax</item>
        <item>What About Love</item>
        <item>Donnybrook</item>
        <item>The Divorce Party</item>
        <item>Transit</item>
        <item>Shadow</item>
        <item>A Madea Family Funeral</item>
        <item>Harmony</item>
        <item>Among the Shadows</item>
        <item>Saint Judy</item>
    </string-array>
</resources>