<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.DetailMovieActivity">

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_dragon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/CustomBackgroundTransparent"
            android:id="@+id/constraintLayout2"
            android:layout_marginBottom="@dimen/margin_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".activity.DetailActivityMovie"
            tools:ignore="RedundantNamespace">


            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/txt_rating"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_dragon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.032"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/star_yellow"
                android:gravity="center"
                android:text="@string/txt_rating"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_poster"
                app:layout_constraintVertical_bias="0.227" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/tv_rating"
                android:text="@string/text_movie"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_rating"
                app:layout_constraintTop_toTopOf="@+id/tv_rating" />

            <TextView
                style="@style/TextContent"
                android:id="@+id/tv_year"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="@string/txt_year" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/textView"
                android:text="@string/release_date_thumbnail"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/textView2"
                android:text="@string/spacing"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/tv_release_date"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextContent.Small"
                android:text="@string/duration_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextContent.Small"
                android:layout_marginStart="0dp"
                android:text="@string/spacing"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/tv_duration"
                android:text="@string/duration"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/textView5"
                android:text="@string/genre_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextContent.Small"
                android:layout_marginStart="0dp"
                android:text="@string/spacing"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/tv_genre"
                android:text="@string/genre"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

            <TextView
                style="@style/TextContent.Small"
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_description"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>