<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/movie_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_dragon"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/CustomBackgroundTransparent"
        android:id="@+id/constraintLayout"
        android:padding="@dimen/margin_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextContent"
            android:id="@+id/tv_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_movie" />

        <TextView
            style="@style/TextContent.Small"
            android:id="@+id/tv_year"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/tv_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/tv_title"
            app:layout_constraintTop_toTopOf="@id/tv_title"
            tools:text="@string/txt_year" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/tv_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/star_yellow"
            android:gravity="center"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/txt_rating" />

        <TextView
            style="@style/TextContent.Small"
            android:id="@+id/tv_description"
            android:layout_below="@id/tv_rating"
            android:layout_alignParentStart="true"
            android:maxLines="3"
            android:text="@string/txt_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>